--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.0.0",
+    "image-to-base64": "^2.2.0",
     "next": "^14.2.28",
     "openai": "^4.28.0",
     "postcss": "^8.0.0",
